--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.c.j,jdbc.Driver 
-spring.jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database.platform=org.hibernate.dialect.MySQL8Dialect
 
 
