--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
     </properties>
 
     <dependencies>
+        
+        <dependency>
+          <groupId>org.springframework.security</groupId>
+           <artifactId>spring-security-crypto</artifactId>
+        </dependency>
 
         <!-- Web -->
         <dependency>
